--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,8 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    "types": ["@cloudflare/workers-types/2023-07-01"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
